[project]
name = "thinking-with-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mkdocs-material>=9.6.9",
    "mkdocs-git-authors-plugin>=0.9.4",
    "mkdocs-git-revision-date-localized-plugin>=1.4.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
